--- a/.env_bak
+++ b/.env_bak
@@ -1,5 +1,5 @@
 OPENAI_API_KEY1="sk-c788e1d.......be91b871bc19a6"
-OPENAI_BASE_URL="https://apic1.ohmycdn.com/v1" //学长的网站，推荐
+OPENAI_BASE_URL="https://apic1.ohmycdn.com/v1"
 #阿里云百炼平台
 DASHSCOPE_API_KEY="sk-c788e1d.......be91b871bc19a6"
 DASHSCOPE_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
