--- a/.env_bak
+++ b/.env_bak
@@ -8,5 +8,5 @@ ZHIPUAI_API_KEY="63a0f275b3a94........k9rA4Y8daGaLydxQ"
 ZHIPUAI_URL="https://open.bigmodel.cn/api/paas/v4/"
 #硅基流动
 SILICON_API_KEY="sk-auciaxqpzc......alhwleyrdoyjani"
-
+TAVILY_API_KEY="tvly-dev-"
 
