--- a/.env_bak
+++ b/.env_bak
@@ -9,4 +9,4 @@ ZHIPUAI_URL="https://open.bigmodel.cn/api/paas/v4/"
 #硅基流动
 SILICON_API_KEY="sk-auciaxqpzc......alhwleyrdoyjani"
 TAVILY_API_KEY="tvly-dev-"
-
+GOOGLE_API_KEY=""
